--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "./node_modules/.bin/nodemon bin/run",
+    "start": "gulp --config true",
     "koa": "./node_modules/.bin/runkoa bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register --require babel-polyfill"
   },
   "dependencies": {
-    "co": "^4.6.0",
-    "debug": "^2.2.0",
-    "jade": "~1.11.0",
     "kcors": "^1.2.0",
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
@@ -20,7 +17,6 @@
     "koa-onerror": "^1.2.1",
     "koa-router": "^7.0.0",
     "koa-static": "^1.5.2",
-    "koa-views": "^5.0.1",
     "mongoose": "^4.4.14",
     "runkoa": "^1.3.1",
     "socket.io": "^1.4.5"
@@ -29,6 +25,7 @@
     "babel-polyfill": "latest",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0",
+    "chai": "^3.5.0",
     "gulp": "^3.9.1",
     "gulp-ng-constant": "^1.1.0",
     "gulp-nodemon": "^2.0.6",
