socket.IO refactoring

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-ng-constant": "^1.1.0",
     "gulp-nodemon": "^2.0.6",
     "nodemon": "^1.8.1",
+    "request": "^2.72.0",
     "yargs": "latest"
   }
 }
