--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "test": "mocha --compilers js:babel-register --require babel-polyfill"
   },
   "dependencies": {
+    "bcryptjs": "^2.3.0",
+    "jsonwebtoken": "^6.2.0",
     "kcors": "^1.2.0",
     "koa": "^2.0.0",
     "koa-bodyparser": "^2.0.1",
@@ -18,7 +20,6 @@
     "koa-router": "^7.0.0",
     "koa-static": "^1.5.2",
     "mongoose": "^4.4.14",
-    "runkoa": "^1.3.1",
     "socket.io": "^1.4.5"
   },
   "devDependencies": {
