--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "angular": "^1.5.5",
     "angular-route": "^1.5.5",
-    "angular-material": "^1.0.8"
+    "angular-material": "^1.1.0",
+    "angular-animate": "^1.5.5",
+    "socket.io-client": "^1.4.6"
   }
 }
